add string connection

--- a/WebApiOracle/appsettings.json
+++ b/WebApiOracle/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "OracleDBConnection": "User id=;Password=;Data Source=;"
+    "OracleDBConnection": "User id=;Password=;Data Source=;",
+    "MySqlDBConnection": "User id=;Password=;Data Source=;"
   },
   "AllowedHosts": "*"
 }
